[package]
name = "toref"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
env_logger = "0.9"
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.26", features = ["serialize"] }